--- a/Lab_2/AttnSeq2Seq/AttnSeq2Seq_tmp.ipynb
+++ b/Lab_2/AttnSeq2Seq/AttnSeq2Seq_tmp.ipynb
@@ -16,9 +16,7 @@
     "\n",
     "Начальный lr взят 0.001. Также при обучении спользовался шедьюлер StepLR, который каждые 300 шагов понижал в 0.91 раз lr. Пробовал брать коэффициент понижения lr меньше, но тогда на поздних этапах при маленьком lr модель обучалась хуже и показывала меньшее BLEU на валидационной выборке.\n",
     "\n",
-    "ИТОГ: После подбора всех гиперпараметров итоговая модель дала BLEU на тестовой выборке 29.1.\n",
-    "\n",
-    "Сравнение с трансформером дано в ноутбуке MyTransformer."
+    "ИТОГ: После подбора всех гиперпараметров итоговая модель дала BLEU на тестовой выборке 29.1."
    ]
   },
   {
