--- a/Lab_2/AttnSeq2Seq/AttnSeq2Seq.ipynb
+++ b/Lab_2/AttnSeq2Seq/AttnSeq2Seq.ipynb
@@ -10,13 +10,17 @@
     "\n",
     "Для создания словаря использовался теокенизатор по словам и пунктуации (nltk.tokenize.wordpunct_tokenize). Для попадания в словарь слово должно встретиться в корпусе хотя бы 3 раза.\n",
     "\n",
-    "Был проведен подбор гиперпараметров. Наилучшим образом себя показала модель с параметрами: размер эмбедингов 256, размер скрытого слоя 512, однослойная GRU, дропаут 0.5. В моделе порядка 12M параметров. Модель обучалась 15 эпох. Обучение одной эпохи занимало околок пол минуты.\n",
+    "Был проведен подбор гиперпараметров. Наилучшим образом себя показала модель с гиперпараметрами: размер эмбедингов 256, размер скрытого слоя 512, однослойная GRU, дропаут 0.5. В моделе порядка 12M параметров. Модель обучалась 15 эпох. Обучение одной эпохи занимало околок пол минуты.\n",
     "\n",
     "Более большие модели показывали большую склонность к переобучению, а более маленькие модели давали большой лосс.\n",
     "\n",
     "Начальный lr взят 0.001. Также при обучении спользовался шедьюлер StepLR, который каждые 300 шагов понижал в 0.91 раз lr. Пробовал брать коэффициент понижения lr меньше, но тогда на поздних этапах при маленьком lr модель обучалась хуже и показывала меньшее BLEU на валидационной выборке.\n",
     "\n",
-    "ИТОГ: После подбора всех гиперпараметров итоговая модель дала BLEU на тестовой выборке 29.1.\n",
+    "ИТОГИ:\n",
+    "\n",
+    "После подбора всех гиперпараметров итоговая модель дала BLEU на тестовой выборке 29.1.\n",
+    "\n",
+    "В сравнении с базовой моделью произошло сильное увеличение качества. Однако, такая модель обучается в 2 раза дольше.\n",
     "\n",
     "Сравнение с трансформером дано в ноутбуке MyTransformer."
    ]
@@ -832,32 +836,6 @@
     "# Calculate BLEU score\n",
     "bleu_score, translated_sentences, target_sentences = calc_bleu(model, test_loader)\n",
     "print(\"BLEU Score:\", bleu_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ENC_EMB_DIM = 256\n",
-    "DEC_EMB_DIM = 256\n",
-    "ENC_HID_DIM = 512\n",
-    "DEC_HID_DIM = 512\n",
-    "N_LAYERS = 1\n",
-    "ENC_DROPOUT = 0.5\n",
-    "DEC_DROPOUT = 0.5\n",
-    "\n",
-    "lr = 0.001\n",
-    "\n",
-    "n_show = 100\n",
-    "N_EPOCHS = 12\n",
-    "CLIP = 1.0\n",
-    "save_file = SAVE_DIR + f'model_{I}.pt'\n",
-    "\n",
-    "optimizer = optim.Adam(model.parameters(), lr=lr)\n",
-    "criterion = nn.CrossEntropyLoss(ignore_index=PAD_IDX)\n",
-    "lr_scheduler = StepLR(optimizer, step_size=300, gamma=0.77)"
    ]
   },
   {
